// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar ant-tabs-top-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#left"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#right"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      Content of Tab Pane 1
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`renders ./components/tabs/demo/card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation"
>
  <div
    class="ant-tabs-bar ant-tabs-top-bar ant-tabs-card-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#left"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#right"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="ant-tabs-content ant-tabs-content-no-animated ant-tabs-top-content ant-tabs-card-content"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      Content of Tab Pane 1
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`renders ./components/tabs/demo/card-top.md correctly 1`] = `
<div
  class="card-container"
>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation"
  >
    <div
      class="ant-tabs-bar ant-tabs-top-bar ant-tabs-card-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              aria-label="icon: left"
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#left"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              aria-label="icon: right"
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#right"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab Title 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
    <div
      class="ant-tabs-content ant-tabs-content-no-animated ant-tabs-top-content ant-tabs-card-content"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-add-trigger.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        ADD
      </span>
    </button>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation"
  >
    <div
      class="ant-tabs-bar ant-tabs-top-bar ant-tabs-card-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              aria-label="icon: left"
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#left"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              aria-label="icon: right"
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#right"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  <div>
                    Tab 1
                    <i
                      aria-label="icon: close"
                      class="anticon anticon-close ant-tabs-close-x"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        width="1em"
                      >
                        <use
                          href="#close"
                        />
                      </svg>
                    </i>
                  </div>
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  <div>
                    Tab 2
                    <i
                      aria-label="icon: close"
                      class="anticon anticon-close ant-tabs-close-x"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        width="1em"
                      >
                        <use
                          href="#close"
                        />
                      </svg>
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
    <div
      class="ant-tabs-content ant-tabs-content-no-animated ant-tabs-top-content ant-tabs-card-content"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        Content of Tab Pane 1
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-tab-bar.md correctly 1`] = `
<div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
  >
    <div>
      <div />
      <div
        class="ant-tabs-bar ant-tabs-top-bar"
        role="tablist"
        style="z-index:1;background:#fff"
        tabindex="0"
      >
        <div
          class="ant-tabs-nav-container"
        >
          <span
            class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
            unselectable="unselectable"
          >
            <span
              class="ant-tabs-tab-prev-icon"
            >
              <i
                aria-label="icon: left"
                class="anticon anticon-left ant-tabs-tab-prev-icon-target"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#left"
                  />
                </svg>
              </i>
            </span>
          </span>
          <span
            class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
            unselectable="unselectable"
          >
            <span
              class="ant-tabs-tab-next-icon"
            >
              <i
                aria-label="icon: right"
                class="anticon anticon-right ant-tabs-tab-next-icon-target"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  width="1em"
                >
                  <use
                    href="#right"
                  />
                </svg>
              </i>
            </span>
          </span>
          <div
            class="ant-tabs-nav-wrap"
          >
            <div
              class="ant-tabs-nav-scroll"
            >
              <div
                class="ant-tabs-nav ant-tabs-nav-animated"
              >
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="ant-tabs-tab-active ant-tabs-tab"
                    role="tab"
                  >
                    Tab 1
                  </div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class=" ant-tabs-tab"
                    role="tab"
                  >
                    Tab 2
                  </div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class=" ant-tabs-tab"
                    role="tab"
                  >
                    Tab 3
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
    <div
      class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        style="height:200px"
      >
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        Content of Tab Pane 1
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-tab-bar-node.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar ant-tabs-top-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#left"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#right"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div />
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      Content of Tab Pane 1
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`renders ./components/tabs/demo/disabled.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar ant-tabs-top-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#left"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#right"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="true"
                aria-selected="false"
                class=" ant-tabs-tab ant-tabs-tab-disabled"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      Tab 1
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`renders ./components/tabs/demo/editable-card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation"
>
  <div
    class="ant-tabs-bar ant-tabs-top-bar ant-tabs-card-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-extra-content"
      style="float:right"
    >
      <span>
        <i
          aria-label="icon: plus"
          class="anticon anticon-plus ant-tabs-new-tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#plus"
            />
          </svg>
        </i>
      </span>
    </div>
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#left"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#right"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 1
                  <i
                    aria-label="icon: close"
                    class="anticon anticon-close ant-tabs-close-x"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#close"
                      />
                    </svg>
                  </i>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 2
                  <i
                    aria-label="icon: close"
                    class="anticon anticon-close ant-tabs-close-x"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#close"
                      />
                    </svg>
                  </i>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <div
                  class="ant-tabs-tab-unclosable"
                >
                  Tab 3
                </div>
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="ant-tabs-content ant-tabs-content-no-animated ant-tabs-top-content ant-tabs-card-content"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      Content of Tab 1
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`renders ./components/tabs/demo/extra.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar ant-tabs-top-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-extra-content"
      style="float:right"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Extra Action
        </span>
      </button>
    </div>
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#left"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#right"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      Content of tab 1
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`renders ./components/tabs/demo/icon.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar ant-tabs-top-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        >
          <i
            aria-label="icon: left"
            class="anticon anticon-left ant-tabs-tab-prev-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#left"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        >
          <i
            aria-label="icon: right"
            class="anticon anticon-right ant-tabs-tab-next-icon-target"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#right"
              />
            </svg>
          </i>
        </span>
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <span>
                  <i
                    aria-label="icon: apple"
                    class="anticon anticon-apple"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#apple"
                      />
                    </svg>
                  </i>
                  Tab 1
                </span>
              </div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                <span>
                  <i
                    aria-label="icon: android"
                    class="anticon anticon-android"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#android"
                      />
                    </svg>
                  </i>
                  Tab 2
                </span>
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
    style="margin-left:-100%"
  >
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      Tab 2
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`renders ./components/tabs/demo/nest.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      />
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      />
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      />
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-select ant-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-controls=""
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="ant-select-selection__rendered"
      />
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <i
          aria-label="icon: down"
          class="anticon anticon-down ant-select-arrow-icon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#down"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
  >
    <div
      class="ant-tabs-bar ant-tabs-top-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              aria-label="icon: left"
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#left"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              aria-label="icon: right"
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#right"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
    <div
      class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        <div
          class="ant-tabs ant-tabs-top ant-tabs-line"
          style="height:300px"
        >
          <div
            class="ant-tabs-bar ant-tabs-top-bar"
            role="tablist"
            tabindex="0"
          >
            <div
              class="ant-tabs-nav-container"
            >
              <span
                class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
                unselectable="unselectable"
              >
                <span
                  class="ant-tabs-tab-prev-icon"
                >
                  <i
                    aria-label="icon: left"
                    class="anticon anticon-left ant-tabs-tab-prev-icon-target"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#left"
                      />
                    </svg>
                  </i>
                </span>
              </span>
              <span
                class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
                unselectable="unselectable"
              >
                <span
                  class="ant-tabs-tab-next-icon"
                >
                  <i
                    aria-label="icon: right"
                    class="anticon anticon-right ant-tabs-tab-next-icon-target"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    >
                      <use
                        href="#right"
                      />
                    </svg>
                  </i>
                </span>
              </span>
              <div
                class="ant-tabs-nav-wrap"
              >
                <div
                  class="ant-tabs-nav-scroll"
                >
                  <div
                    class="ant-tabs-nav ant-tabs-nav-animated"
                  >
                    <div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 0
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="true"
                        class="ant-tabs-tab-active ant-tabs-tab"
                        role="tab"
                      >
                        Tab 1
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 2
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 3
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 4
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 5
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 6
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 7
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 8
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 9
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 10
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 11
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 12
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 13
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 14
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 15
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 16
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 17
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 18
                      </div>
                      <div
                        aria-disabled="false"
                        aria-selected="false"
                        class=" ant-tabs-tab"
                        role="tab"
                      >
                        Tab 19
                      </div>
                    </div>
                    <div
                      class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            role="presentation"
            style="width:0;height:0;overflow:hidden;position:absolute"
            tabindex="0"
          />
          <div
            class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
            style="margin-left:-100%"
          >
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="false"
              class="ant-tabs-tabpane ant-tabs-tabpane-active"
              role="tabpanel"
            >
              <div
                role="presentation"
                style="width:0;height:0;overflow:hidden;position:absolute"
                tabindex="0"
              />
              TTTT 1
              <div
                role="presentation"
                style="width:0;height:0;overflow:hidden;position:absolute"
                tabindex="0"
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
            <div
              aria-hidden="true"
              class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
              role="tabpanel"
            />
          </div>
          <div
            role="presentation"
            style="width:0;height:0;overflow:hidden;position:absolute"
            tabindex="0"
          />
        </div>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/position.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    Tab position：
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-controls=""
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="top"
          >
            top
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <i
            aria-label="icon: down"
            class="anticon anticon-down ant-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                href="#down"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
  >
    <div
      class="ant-tabs-bar ant-tabs-top-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              aria-label="icon: left"
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#left"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              aria-label="icon: right"
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#right"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
    <div
      class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        Content of Tab 1
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-small ant-tabs-line"
  >
    <div
      class="ant-tabs-bar ant-tabs-top-bar ant-tabs-small-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              aria-label="icon: left"
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#left"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              aria-label="icon: right"
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#right"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
    <div
      class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        Content of tab 1
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/slide.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:8px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="top"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Horizontal
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="left"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Vertical
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
    style="height:220px"
  >
    <div
      class="ant-tabs-bar ant-tabs-top-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          >
            <i
              aria-label="icon: left"
              class="anticon anticon-left ant-tabs-tab-prev-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#left"
                />
              </svg>
            </i>
          </span>
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          >
            <i
              aria-label="icon: right"
              class="anticon anticon-right ant-tabs-tab-next-icon-target"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#right"
                />
              </svg>
            </i>
          </span>
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div>
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="ant-tabs-tab-active ant-tabs-tab"
                  role="tab"
                >
                  Tab 1
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 2
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 3
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 4
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 5
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 6
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 7
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 8
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 9
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 10
                </div>
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class=" ant-tabs-tab"
                  role="tab"
                >
                  Tab 11
                </div>
              </div>
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
    <div
      class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        Content of tab 1
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
  </div>
</div>
`;
